workload.yaml
# Main service receiving response from ingress
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
  labels:
    app: hello-kube
    service: hello-kube
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-kube
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-kube
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: hello-kube
        version: v1
    spec:
      containers:
      - name: hello-kube
        image: guykorean/hello-kube:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
# hello-msg services being called by main service
apiVersion: v1
kind: Service
metadata:
  name: hello-msg
  labels:
    app: hello-msg
    service: hello-msg
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: hello-msg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-msg-v1
  labels:
    app: hello-msg
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-msg
      version: v1
  template: # template for the pods
    metadata:
      labels:
        app: hello-msg
        version: v1
    spec:
      containers:
      - name: hello-msg
        image: guykorean/hello-msg:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-msg-v2
  labels:
    app: hello-msg
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-msg
      version: v2
  template: # template for the pods
    metadata:
      labels:
        app: hello-msg
        version: v2
    spec:
      containers:
      - name: hello-msg-app
        image: guykorean/hello-msg:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
---
