canary-msg.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-msg-app
spec:
  hosts:
    - hello-msg-app
  gateways:
    - mesh
  http:
  - route:
    - destination:
        host: hello-msg-app
        port:
          number: 8888
        subset: v1
      weight: 90
    - destination:
        host: hello-msg-app
        port:
          number: 8888
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-msg-app
spec:
  host: hello-msg-app
#  trafficPolicy:
#    tls:
#      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kube-canary-app
spec:
  host: kube-canary-app
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-canary-app
spec:
  hosts:
    - kube-canary-app
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: kube-canary-app
            port:
              number: 8080
            subset: v1
---
